tests/Error/YS03xx/YS0302.ys
VAR x = GetX() # Function GetX() is not defined
